# opencv_screen_capture

./: .gitignore  CMakeLists.txt
src/: main.cpp
