CMAKE_MINIMUM_REQUIRED( VERSION 3.5.1 )

ADD_DEFINITIONS( -std=c++11 )

PROJECT( ScreenShot )

FIND_PACKAGE(OpenCV REQUIRED)

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")

AUX_SOURCE_DIRECTORY( ${PROJECT_SOURCE_DIR}/src test_src )

ADD_EXECUTABLE( mytest ${test_src} )

TARGET_LINK_LIBRARIES(mytest ${OpenCV_LIBS})
